SSCS-9381: Fortify scan for nightly build (#2212)